syntax = "proto3";

package test;

option go_package = ".;testv1";
import "google/api/annotations.proto";
import "google/pubsub/v1/pubsub.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";


// TestAPI
service TestAPI {
  rpc HandleTestMessageRPC(PubSubRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post : "/v1/handle_test_message"
      body: "*"
    };
  }

  rpc PublishTestMessageRPC(PublishTestMessageRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post : "/v1/publish_test_message"
      body: "*"
    };
  }

}

message PublishTestMessageRequest {
  string data = 1;
}

message PubSubRequest {
  google.pubsub.v1.PubsubMessage message = 1;
  string subscription = 2;
}

message TestMessage {
  string data = 1;
  google.protobuf.Timestamp created_at = 2;
}